stuff to create first tests

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,55 +1,10 @@
 bin_PROGRAMS=\
-	test_format \
-	test_format11 \
-	test_format98 \
-	test_wformat \
-	test_static_format \
-	test_cpputilsshared \
-	test_io
-	
-test_format_SOURCES=\
-		src_test_format/test_format.cc \
-		tools_config.h
-
-test_format11_SOURCES=\
-		src_test_format/test_format11.cc \
-		tools_config.h
-
-test_format98_SOURCES=\
-		src_test_format/test_format98.cc \
+	test_fir	
+		
+test_fir_SOURCES=\
+		src_test_fir/test_fir.cc \
 		tools_config.h
 		
-test_wformat_SOURCES=\
-		src_test_format/test_wformat.cc \
-		tools_config.h
-		
-test_static_format_SOURCES=\
-		src_test_format/test_static_format.cc \
-		tools_config.h
-
-test_cpputilsshared_SOURCES=\
-		src_test_cpputilsshared/test_string_utils.cc \
-		src_test_cpputilsshared/test_string_utils.h \
-		src_test_cpputilsshared/test_cpputilsshared.cc \
-		src_test_cpputilsshared/test_cyclicarray.h \
-		src_test_cpputilsshared/test_cyclicarray.cc \
-		src_test_cpputilsshared/test_static_vector.h \
-		src_test_cpputilsshared/test_static_vector.cc \
-		src_test_cpputilsshared/test_static_list.h \
-		src_test_cpputilsshared/test_static_list.cc \
-		src_test_cpputilsshared/test_static_string.h \
-		src_test_cpputilsshared/test_static_string.cc \
-		src_test_cpputilsshared/test_span_vector.cc \
-		src_test_cpputilsshared/test_span_vector.h \
-		src_test_cpputilsshared/test_string_adapter.cc \
-		src_test_cpputilsshared/test_string_adapter.h \
-		tools_config.h
-		
-test_io_SOURCES=\
-		src_test_io/test_io.cc \
-		src_test_io/test_read_file.cc \
-		src_test_io/test_read_file.h \
-		tools_config.h		
 
 AM_CPPFLAGS = -I$(top_srcdir)/tools \
 	-I$(top_srcdir)/cpputils/cpputilsshared  \
@@ -140,30 +95,7 @@ common_libcommon_a_SOURCES=\
 	common/ColBuilder.h \
 	common/ColBuilder.cc
 
-test_format_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
-	cpputils/io/libcpputilsio.a
-
-test_format11_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
-	cpputils/io/libcpputilsio.a
-
-test_format98_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
-	cpputils/io/libcpputilsio.a
-
-test_wformat_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
-	cpputils/io/libcpputilsio.a \
-	cpputils/cpputilsshared/libcpputilsshared.a
-
-test_static_format_LDADD = \
-	cpputils/io/libcpputilsio.a \
-	cpputils/cpputilsshared/libcpputilsshared.a \
-	cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a
-
-test_cpputilsshared_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
-	cpputils/io/libcpputilsio.a \
-	cpputils/cpputilsshared/libcpputilsshared.a \
-	common/libcommon.a
-	
-test_io_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
+test_fir_LDADD = cpputils/cpputilsshared/cpputilsformat/libcpputilsformat.a \
 	cpputils/io/libcpputilsio.a \
 	cpputils/cpputilsshared/libcpputilsshared.a \
 	common/libcommon.a
